# rag-knowledge-assistant

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py  config.py  main.py  schemas.py
app/api/: auth.py  routes.py
app/core/: chunking.py  email.py  embeddings.py  ingest.py  llm.py  oauth.py  service.py  vectorstore.py
data/sample_docs/: ai_automation_overview.md
frontend/: app.js  index.html  styles.css
scripts/: ingest_sample.py
tests/: conftest.py  test_api.py  test_chunking.py  test_providers.py  test_vectorstore.py
