[project]
name = "rag-knowledge-assistant"
version = "1.0.0"
description = "Retrieval-Augmented Generation API with citations, built with FastAPI and Claude."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "numpy==2.2.1",
    "anthropic==0.42.0",
    "openai==1.59.6",
    "pypdf==5.1.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
